# MCProtocol.rs

./: .gitignore  Cargo.toml  LICENSE  README.md
encryption_utils/: Cargo.toml
encryption_utils/src/: lib.rs
examples/: README.md
examples/bot_client/: Cargo.toml  README.md
examples/bot_client/src/: main.rs
examples/custom_packets/: Cargo.toml
examples/custom_packets/src/: lib.rs
examples/status_responder/: Cargo.toml  README.md
examples/status_responder/src/: main.rs
impl/client/: Cargo.toml
impl/client/src/: lib.rs  status_client.rs
impl/server/: Cargo.toml
impl/server/src/: client_connection.rs  client_status_handler.rs  client_worker.rs  lib.rs  server.rs
impl/server/src/login/: mod.rs  notchian.rs
mc_buffer/: Cargo.toml
mc_buffer/src/: buffer.rs  encryption.rs  engine.rs  lib.rs  prelude.rs
mc_chat/: Cargo.toml
mc_chat/src/: lib.rs
mc_commands/: Cargo.toml
mc_commands/src/: lib.rs
mc_level/: Cargo.toml
mc_level/src/: blocks.rs  chunk.rs  codec.rs  lib.rs
mc_registry/: Cargo.toml
mc_registry/src/: error.rs  lib.rs  main.rs  mappings.rs  prelude.rs  registry.rs
mc_registry/src/client_bound/: login.rs  play.rs  status.rs
mc_registry/src/server_bound/: handshaking.rs  login.rs  play.rs  status.rs
mc_registry/src/shared_types/: login.rs  mod.rs  play.rs  sound.rs
mc_registry_derive/: Cargo.toml
mc_registry_derive/src/: lib.rs
mc_serializer/: Cargo.toml
mc_serializer/src/: ext.rs  lib.rs  primitive.rs  serde.rs
mc_serializer_derive/: Cargo.toml
mc_serializer_derive/src/: bitmap.rs  enums.rs  fields.rs  lib.rs  structs.rs
mc_serializer_derive/src/directives/: after.rs  mod.rs
mcprotocol_dev/: Cargo.toml
mcprotocol_dev/src/: login_sampler.rs  main.rs  main.tmp  main.tmp2  main.tmp3  main.tmp4  worker.rs
minecraft_buffer/: Cargo.toml
minecraft_buffer/src/: lib.rs  readable_client.rs
minecraft_registry/: Cargo.toml
minecraft_registry/src/: lib.rs  mappings.rs  registry.rs
minecraft_registry/src/client_bound/: status.rs
minecraft_registry/src/server_bound/: handshaking.rs  status.rs
minecraft_registry_derive/: Cargo.toml
minecraft_registry_derive/src/: lib.rs
minecraft_serde/: Cargo.toml
minecraft_serde/src/: ext.rs  lib.rs  primitive.rs  serde.rs
minecraft_serde_derive/: Cargo.toml
minecraft_serde_derive/src/: lib.rs
registry_json_creator/: Cargo.toml
registry_json_creator/input/: blocks
registry_json_creator/src/: main.rs
src/: buffer.rs  chat.rs  commands.rs  common.rs  crypto.rs  encoding.rs  encryption.rs  ext.rs  handshaking.rs  lib.rs  main.rs  pipeline.rs  prelude.rs  protocol.rs  registry.rs  server_loop.rs  serverbound.rs  status.rs
src/auth/: bungee.rs  mod.rs  mojang.rs  velocity.rs
src/clientbound/: login.rs  play.rs  status.rs
src/common/: bit_set.rs  bit_storage.rs  chat.rs  chunk.rs  play.rs  registry.rs
src/common/registry/: block_states.json  blocks.json  items.json
src/packets/: client_bound.rs  gen.rs  mod.rs  packet.rs  packet_async.rs  prelude.rs  server_bound.rs
src/protocol/: bit_storage.rs  chunk.rs  constants.rs  play.rs
src/serverbound/: login.rs  play.rs  status.rs
src/types/: ext.rs  mod.rs  nums.rs  prelude.rs  strings.rs
