[package]
name = "mcprotocol"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
drax = { path = "../Drax/drax_core", features = ["full"], version = "0.1.0" }
drax_derive = { path = "../Drax/drax_derive" }
data-encoding = "2.3.2"
openssl = "0.10.41"
rand = "0.8.5"
rsa = "0.5"
rsa-der = "0.2.1"
serde_derive = "1.0.145"
serde = "1.0.145"
uuid = { version = "1.1.2", features = ["serde"] }
tokio = { version = "1.21.0", features = ["sync", "time"] }
sha2 = "0.10.6"
reqwest = { version = "0.11.12", features = ["json"] }
num-bigint = "0.4.3"
sha-1 = "0.9"
md-5 = "0.9"
cipher = "0.3.0"
log = "0.4.17"
