[package]
name = "mcprotocol"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
drax = { git = "https://github.com/ScrapyardRs/Drax", branch = "develop", features = ["nbt"] }
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
tokio = { version = "1.24.1", features = ["full", "test-util"] }
uuid = { version = "1.2.2", features = ["serde"]}
