[package]
name = "encryption_utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.58"
data-encoding = "2.3.2"
openssl = "0.10.41"
rand = "0.8.5"
rsa = "0.5"
rsa-der = "0.2.1"
rsa-fdh = "0.5.0"
sha2 = "0.10.2"
sha3 = "0.10.1"
