[package]
name = "mc_level"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = "1.0.140"
serde_derive = "1.0.138"
mc_serializer = { path = "../mc_serializer", version = "0.1.0" }
mc_serializer_derive = { path = "../mc_serializer_derive", version = "0.1.0" }
hematite-nbt = { git = "https://github.com/CoreyShupe/hematite_nbt", branch = "feature/allow-quick-exit", version = "*" }
