[package]
name = "mc_serializer"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = "1.2.0"
hematite-nbt = { git = "https://github.com/CoreyShupe/hematite_nbt", branch = "feature/allow-quick-exit", version = "*" }
serde = "1.0.140"
serde_json = "1.0.82"
uuid = "1.1.2"
cesu8 = "1.1.0"
paste = "1.0.8"
serde_derive = "1.0.143"
