[package]
name = "mc_serializer_derive"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = "1.0.98"
mc_serializer = { path = "../mc_serializer", version = "0.1.0" }
hematite-nbt = {version = "0.5.2", features = ["serde"] }
serde = "1.0.140"
