[package]
name = "mcprotocol_dev"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.58"
minecraft_serde = { path = "../minecraft_serde", version = "0.1.0" }
minecraft_serde_derive = { path = "../minecraft_serde_derive", version = "0.1.0" }
minecraft_registry = { path = "../minecraft_registry", version = "0.1.0" }
minecraft_registry_derive = { path = "../minecraft_registry_derive", version = "0.1.0" }
minecraft_buffer = { path = "../minecraft_buffer", version = "0.1.0" }
tokio = { version = "1.19.2", features = ["full"] }
serde = "1.0.138"
serde_derive = "1.0.138"
serde_json = "1.0.82"
