[package]
name = "mcprotocol_dev"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.58"
mc_serializer = { path = "../mc_serializer", version = "0.1.0" }
mc_registry = { path = "../mc_registry", version = "0.1.0" }
mc_buffer = { path = "../mc_buffer", version = "0.1.0" }
encryption_utils = { path = "../encryption_utils", version = "0.1.0" }
mc_impl_server = { path = "../impl/server", version = "0.1.0" }
tokio = { version = "1.19.2", features = ["full"] }
mc_serializer_derive = { path = "../mc_serializer_derive", version = "0.1.0" }
mc_registry_derive = { path = "../mc_registry_derive", version = "0.1.0" }
sha3 = "0.10.1"
rsa-fdh = "0.5.0"
fern = "0.6.1"
chrono = "0.4.19"
log = "0.4.17"
uuid = {version = "1.1.2", features = ["std", "v4"]}
datetime = "0.5.2"
bytes = "1.2.0"
