[package]
name = "mcprotocol_dev"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.58"
tokio = { version = "1.19.2", features = ["full"] }
mc_serializer = { path = "../mc_serializer", version = "0.1.0" }
mc_serializer_derive = { path = "../mc_serializer_derive", version = "0.1.0" }
mc_registry = { path = "../mc_registry", version = "0.1.0" }
mc_registry_derive = { path = "../mc_registry_derive", version = "0.1.0" }
mc_buffer = { path = "../mc_buffer", version = "0.1.0" }
serde_derive = "1.0.140"
serde = "1.0.140"
bytes = "1.2.1"
