[package]
name = "minecraft_registry"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.58"
futures = "0.3.21"
minecraft_serde = { path = "../minecraft_serde", version = "0.1.0" }
minecraft_serde_derive = { path = "../minecraft_serde_derive", version = "0.1.0" }
tokio = { version = "1.19.2", features = ["sync", "net", "io-util"] }
