[package]
name = "bot_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.56"
log = "0.4.16"
mc_protocol = { path = "../.." }
custom_packets = { path = "../custom_packets" }
tokio = { version = "1.17.0", features = ["full"] }
tokio-stream = { version = "0.1.8"}
tokio-util = { version = "0.7.1", features = ["full"] }
