[package]
name = "mc_impl_server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.58"
tokio = { version = "1.19.2", features = ["full"] }
mc_serializer = { path = "../../mc_serializer", version = "0.1.0" }
mc_registry = { path = "../../mc_registry", version = "0.1.0" }
mc_registry_derive = { path = "../../mc_registry_derive", version = "0.1.0" }
mc_buffer = { path = "../../mc_buffer", version = "0.1.0" }
encryption_utils = { path = "../../encryption_utils", version = "0.1.0" }
serde = "1.0.138"
serde_json = "1.0.82"
serde_derive = "1.0.138"
bytes = "1.1.0"
uuid = "1.1.2"
rand = "0.8.5"
sha-1 = "0.9"
md-5 = "0.9"
num-bigint = "0.4"
reqwest = { version = "0.11.11", features = ["json"] }
sha2 = "0.10.2"
sha3 = "0.10.1"
